--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,14 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+# Binary files
 /bin/
 
-#Eclipse config files
+# Eclipse config files
 .classpath
 .project
 .settings/
 
-#IntelliJ IDEA config files
+# IntelliJ IDEA config files
 *.iml
 .idea/
